--- a/TrainingSystem-main/TraniningSystemAPI/appsettings.json
+++ b/TrainingSystem-main/TraniningSystemAPI/appsettings.json
@@ -1,6 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TraningSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+//    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TraningSystem;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost,5433;Initial Catalog=Services.EmployeeDb;User Id=sa;Password=Pass@word"
+  },
+  "Jwt": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "ngay xua co mot con bo"
   },
 
   "Logging": {
