--- a/TrainingSystem-main/TraniningSystemAPI/appsettings.json
+++ b/TrainingSystem-main/TraniningSystemAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-//    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TraningSystem;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=localhost,5433;Initial Catalog=Services.EmployeeDb;User Id=sa;Password=Pass@word"
+   "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TraningSystem1;Trusted_Connection=True;MultipleActiveResultSets=true",
+   "DefaultConnection1": "Server=localhost,5433;Initial Catalog=Services.EmployeeDb;User Id=sa;Password=Pass@word"
   },
   "Jwt": {
     "Issuer": "Issuer",
