--- a/TrainingSystem-main/TrainingSystemTrainerWEB/TrainingSystemTrainerWEB.csproj
+++ b/TrainingSystem-main/TrainingSystemTrainerWEB/TrainingSystemTrainerWEB.csproj
@@ -3,5 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.31" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
 </Project>
