--- a/TrainingSystem-main/TraniningSystemAPI/Properties/launchSettings.json
+++ b/TrainingSystem-main/TraniningSystemAPI/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:5001",
-      "sslPort": 5001
+      "applicationUrl": "http://localhost:14890",
+      "sslPort": 44321
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:44321"
     }
   }
 }
